--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,91 +13,106 @@ variables:
   agentPool: 'TestAgent'
 
 stages:
-- stage: 'Validate Entry Criteria'
+- stage: validate_entry_criteria
+  displayName: Validate Entry Criteria
   jobs:
   - job: Do
     steps:
     - script: echo Validate Entry Criteria
       displayName: Run a one-line script
-- stage: 'Execute Build'
+- stage: execute_build
+  displayName: Execute Build
   jobs:
   - job: Do
     steps:
     - script: echo Execute Build
       displayName: Run a one-line script
-- stage: 'Perform Unit Tests'
+- stage: perform_unit_tests
+  displayName: Perform Unit Tests
   jobs:
   - job: Do
     steps:
     - script: echo Perform Unit Tests
       displayName: Run a one-line script
-- stage: 'Analyze Code'
+- stage: analyze_code
+  displayName: Analyze Code
   jobs:
   - job: Do
     steps:
     - script: echo Analyze Code
       displayName: Run a one-line script
-- stage: 'Package Artifact'
+- stage: package_artifact
+  displayName: Package Artifact
   jobs:
   - job: Do
     steps:
     - script: echo Package Artifact
       displayName: Run a one-line script
-- stage: 'Publish Artifact'
+- stage: publish_artifact
+  displayName: Publish Artifact
   jobs:
   - job: Do
     steps:
     - script: echo Publish Artifact
       displayName: Run a one-line script
-- stage: 'Provision Test Environment'
+- stage: provision_test_environment
+  displayName: Provision Test Environment
   jobs:
   - job: Do
     steps:
     - script: echo Provision Test Environment
       displayName: Run a one-line script
-- stage: 'Deploy Artifact To Test'
+- stage: deploy_artifact_to_test
+  displayName: Deploy Artifact To Test
   jobs:
   - job: Do
     steps:
     - script: echo Deploy Artifact To Test
       displayName: Run a one-line script
-- stage: 'Perform Test'
+- stage: perform_test
+  displayName: Perform Test
   jobs:
   - job: Do
     steps:
     - script: echo Perform Test
       displayName: Run a one-line script
-- stage: 'Validate Infrastructure Compliance'
+- stage: validate_infrastructure_compliance
+  displayName: Validate Infrastructure Compliance
   jobs:
   - job: Do
     steps:
     - script: echo Validate Infrastructure Compliance
       displayName: Run a one-line script
-- stage: 'Validate Exit Criteria'
+- stage: validate_exit_criteria
+  displayName: Validate Exit Criteria
   jobs:
   - job: Do
     steps:
     - script: echo Validate Exit Criteria
       displayName: Run a one-line script
-- stage: 'Perform Dual Control'
+- stage: perform_dual_control
+  displayName: Perform Dual Control
   jobs:
   - job: Do
     steps:
     - script: echo Perform Dual Control
       displayName: Run a one-line script
-- stage: 'Provision Production Environment'
+- stage: provision_production_environment
+  displayName: Provision Production Environment
   jobs:
   - job: Do
     steps:
     - script: echo Provision Production Environment
       displayName: Run a one-line script
-- stage: 'Deploy Artifact to Production'
+- stage: deploy_artifact_to_production
+  displayName: Deploy Artifact to Production
   jobs:
   - job: Do
     steps:
     - script: echo Deploy Artifact to Production
       displayName: Run a one-line script
-- stage: 'Notify Actors'
+- stage: notify_actors
+  displayName: Notify Actors
   jobs:
   - job: Do
     steps:
