--- a/feature-1-pipeline-ci.yml
+++ b/feature-1-pipeline-ci.yml
@@ -4,6 +4,9 @@ trigger:
 pool:
   name: 'TestAgent'
 
-steps:
-  - script: echo Running and Finishing
-  - script: echo pipeline in pipeline-repo will be triggered
+extends:
+  template: general-pipeline-template.yml
+  parameters:
+    ciSteps:
+      - script: echo Running feature-1-pipeline-ci buildSteps in main
+      - script: echo Finishing feature-1-pipeline-ci buildSteps in main
