--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 trigger:
-  - main
+  - '*'
 
 pool:
   name: 'TestAgent'
@@ -15,5 +15,7 @@ extends:
   template: general-pipeline-template.yml@templates
   parameters:
     ciSteps:
+      - script: echo Testing main branch
+        condition: eq($(Build.SourceBranchName), true)
       - script: echo Running ci buildSteps from $(Build.SourceBranchName)
       - script: echo Finishing ci buildSteps from $(Build.SourceBranchName)
