--- a/develop-pipeline.yml
+++ b/develop-pipeline.yml
@@ -15,5 +15,7 @@ extends:
   template: general-pipeline-template.yml@templates
   parameters:
     ciSteps:
+      - script: echo Testing develop branch
+        condition: eq(variables['Build.SourceBranch'], 'refs/heads/develop')
       - script: echo Running develop buildSteps from $(Build.SourceBranchName)
       - script: echo Finishing develop buildSteps from $(Build.SourceBranchName)
